Added the Checking Account functionality/class

--- a/Section_15_Challenge/Makefile
+++ b/Section_15_Challenge/Makefile
@@ -1,6 +1,6 @@
 
-output: main.o Account.o Savings_Account.o Account_Util.o
-	g++ main.o Account.o Savings_Account.o Account_Util.o -o output
+output: main.o Account.o Savings_Account.o Account_Util.o Checking_Account.o
+	g++ main.o Account.o Savings_Account.o Account_Util.o Checking_Account.o -o output
 
 main.o: main.cpp
 	g++ -c main.cpp
@@ -13,6 +13,9 @@ Savings_Account.o: Savings_Account.cpp
 
 Account_Util.o: Account_Util.cpp
 	g++ -c Account_Util.cpp
+
+Checking_Account.o: Checking_Account.cpp
+	g++ -c Checking_Account.cpp
 	
 clean: 
 	rm *.o output
