Added the Trust Account, still have some bugs to work out

--- a/Section_15_Challenge/Makefile
+++ b/Section_15_Challenge/Makefile
@@ -1,6 +1,6 @@
 
-output: main.o Account.o Savings_Account.o Account_Util.o Checking_Account.o
-	g++ main.o Account.o Savings_Account.o Account_Util.o Checking_Account.o -o output
+output: main.o Account.o Savings_Account.o Account_Util.o Checking_Account.o Trust_Account.o
+	g++ main.o Account.o Savings_Account.o Account_Util.o Checking_Account.o Trust_Account.o -o output
 
 main.o: main.cpp
 	g++ -c main.cpp
@@ -16,6 +16,9 @@ Account_Util.o: Account_Util.cpp
 
 Checking_Account.o: Checking_Account.cpp
 	g++ -c Checking_Account.cpp
+
+Trust_Account.o: Trust_Account.cpp
+	g++ -c Trust_Account.cpp
 	
 clean: 
 	rm *.o output
